# Chess

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  phase2
headers/: Console.h  bishop.h  cell.h  chessBoard.h  helper.h  king.h  knight.h  pawn.h  piece.h  pieces.h  queen.h  rook.h
src/: bishop.cpp  chessBoard.cpp  helper.cpp  king.cpp  knight.cpp  main.cpp  pawn.cpp  piece.cpp  pieces.cpp  queen.cpp  rook.cpp
